--- a/package.json
+++ b/package.json
@@ -4,11 +4,14 @@
   "description": "An awesome api that consumes the Marvel API",
   "main": "get-heroes.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "axios": "^0.21.0"
+  },
+  "devDependencies": {
+    "jest": "^26.6.1"
   }
 }
