:sparkles: return heroes grouped by movies

--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "aws-sdk": "^2.783.0",
     "axios": "^0.21.0"
   },
   "devDependencies": {
