--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "axios": "^0.21.0"
   },
   "devDependencies": {
-    "jest": "^26.6.1"
+    "jest": "^26.6.1",
+    "jest-dynalite": "^3.2.0"
   }
 }
