--- a/package.json
+++ b/package.json
@@ -2,8 +2,8 @@
   "name": "marvel-api",
   "version": "1.0.0",
   "description": "An awesome api that consumes the Marvel API",
-  "main": "get-heroes.js",
   "scripts": {
+    "start": "sls offline",
     "test": "jest"
   },
   "author": "",
@@ -14,6 +14,8 @@
   },
   "devDependencies": {
     "jest": "^26.6.1",
-    "jest-dynalite": "^3.2.0"
+    "jest-dynalite": "^3.2.0",
+    "serverless": "^2.12.0",
+    "serverless-offline": "^6.8.0"
   }
 }
