--- a/package.json
+++ b/package.json
@@ -14,6 +14,9 @@
     "axios": "^0.21.0"
   },
   "devDependencies": {
+    "@types/jest": "^26.0.15",
+    "@types/node": "^14.14.9",
+    "@types/supertest": "^2.0.10",
     "jest": "^26.6.1",
     "jest-dynalite": "^3.2.0",
     "serverless": "^2.12.0",
